[tool.poetry]
name = "challonge-api"
version = "2.0.0"
description = "challonge-api provides python bindings for the CHALLONGE! API."
authors = ["George Zed <georlema@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.8"
iso8601 = "^0.1.12"
tzlocal = "^2.0.0"
pytz = "^2019.3"
httpx = "0.16.1"

[tool.poetry.dev-dependencies]
twine = "^3.1.1"
ipdb = "^0.13.3"
black = "^20.8b1"
flake8 = "^3.8.4"
ipython = "7.9.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
